# OSVR-Unity-Rendering

./: .clang-tidy  .gitignore  CMakeLists.txt  OSVRDXGIUtils.h  OsvrAndroidRenderer.cpp  OsvrAndroidRenderer.h  OsvrD3DRenderer.cpp  OsvrD3DRenderer.h  OsvrOpenGLRenderer.cpp  OsvrRenderingPlugin.cpp  OsvrRenderingPlugin.def  OsvrRenderingPlugin.h  OsvrUnityRenderer.cpp  OsvrUnityRenderer.h  PluginConfig.h  README.md  UnityRendererType.h  clang-tidy-run.cmd
Unity/: IUnityGraphics.h
VisualStudio2013/: OsvrRenderingPlugin.sln  OsvrRenderingPlugin.vcproj  OsvrRenderingPlugin.vcxproj
cmake/: FindBoost.cmake  FindGLEW.cmake
